[backend] Get thing images
