# internal/api/v1/image/get_thing_images.go
@@ -1,0 +1,35 @@
+package image
+
+import (
+	"git.dmitriygnatenko.ru/dima/homethings/internal/factory"
+	"git.dmitriygnatenko.ru/dima/homethings/internal/interfaces"
+	"git.dmitriygnatenko.ru/dima/homethings/internal/mappers"
+	"github.com/gofiber/fiber/v2"
+)
+
+// @Router 		/v1/images/thing/{id} [get]
+// @Param       id path int true "Thing ID"
+// @Success     200 {object} dto.ImagesResponse
+// @Failure     400 {object} dto.ErrorResponse
+// @Failure     500 {object} dto.ErrorResponse
+// @Summary     Get images by thing ID
+// @Tags  		Images
+// @security 	BasicAuth
+// @Accept      json
+// @Produce     json
+func GetThingImagesHandler(sp interfaces.IServiceProvider) fiber.Handler {
+	return func(fctx *fiber.Ctx) error {
+		ctx := fctx.Context()
+		id, err := fctx.ParamsInt("id")
+		if err != nil {
+			return factory.CreateBadRequestResponse(fctx, err)
+		}
+
+		res, err := sp.GetThingImageRepository().GetByThingID(ctx, id)
+		if err != nil {
+			return factory.CreateInternalErrorResponse(fctx, err)
+		}
+
+		return fctx.JSON(mappers.ConvertToImagesResponseDTO(res))
+	}
+}
